# replit-mutmut-kata

./: .gitignore  .replit  Makefile  Readme.md  pyproject.toml
html/: index.html
scripts/: move_mut.sh  mutation_test.sh  serve.sh  unit_test.sh
src/: main.py
tests/: main_test.py
