[tool.poetry]
name = "mutmut-test"
version = "0.1.0"
description = ""
authors = ["Pascal Clarkson <info@artocraft.nl>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"

[tool.poetry.dev-dependencies]
mutmut = "^2.4.0"
pytest = "^7.1.2"
coverage = "^6.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
